# pysphereometer

./: pyproject.toml  spherometer.py
pyspherometer/: __init__.py  _version.py  spherometer.py  spherometer.toml
